Remove deprecated constructor usage